--- a/index.html
+++ b/index.html
@@ -169,14 +169,14 @@
 <h1 class="title">Fabian Spaeh</h1>
 </header>
 <p><img src="me.jpg" alt="A picture of me"></p>
-<p>Fifth-year PhD student in computer science at <a
-href="https://www.bu.edu/academics/grs/">Boston University</a> advised
-by <a href="https://cs-people.bu.edu/aene/">Alina Ene</a>. I am broadly
-interested in optimization and currently working on learning-augmented
-algorithms for online allocation problems, submodular maximization, and
-graph algorithms. Previously, I completed a bachelor’s and master’s
-degree in computer science at the University of Konstanz. You can
-contact me by email via fspaeh <em>at</em> bu <em>dot</em> edu.</p>
+<p>Applied Scientist at <a href="https://www.celonis.com/">Celonis
+AI</a>. Previously, I completed a PhD in computer science at <a
+href="https://www.bu.edu/academics/grs/">Boston University</a> where I
+was advised by <a href="https://cs-people.bu.edu/aene/">Alina Ene</a>. I
+am broadly interested in optimization, learning-augmented algorithms for
+online allocation problems, submodular maximization, and graph
+algorithms. You can contact me by email via fspaeh <em>at</em> bu
+<em>dot</em> edu.</p>
 <!--- take a look at my [CV](CV/cv.pdf), or follow me on [Github](https://github.com/285714). -->
 <p style="text-align: center;">
 <a style="margin: 0 5%;" href="CV/cv.pdf">CV</a>
@@ -373,9 +373,22 @@ publications
 </head>
 <body>
 <div id="refs" class="references csl-bib-body" role="doc-bibliography">
-<div id="ref-query-suggestion" class="csl-entry" role="doc-biblioentry">
+<div id="ref-multiobjective" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">
 [1]
+</div>
+<div class="csl-right-inline">
+<ol start="6" type="A">
+<li>Spaeh and A. Miyauchi, <span>“An asymptotically optimal
+approximation algorithm for multiobjective submodular maximization at
+scale.”</span> ICML 2025, doi: <a
+href="https://doi.org/10.48550/arXiv.2505.09525">10.48550/arXiv.2505.09525</a>.
+</div></li>
+</ol>
+</div>
+<div id="ref-query-suggestion" class="csl-entry" role="doc-biblioentry">
+<div class="csl-left-margin">
+[2]
 </div>
 <div class="csl-right-inline">
 <ol start="6" type="A">
@@ -387,7 +400,7 @@ learning at celonis.”</span> In submission.
 </div>
 <div id="ref-election-sway" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">
-[2]
+[3]
 </div>
 <div class="csl-right-inline">
 <ol start="4" type="A">
@@ -400,7 +413,7 @@ href="https://doi.org/10.48550/arXiv.2502.01874">10.48550/arXiv.2502.01874</a>.
 </div>
 <div id="ref-galton-asch" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">
-[3]
+[4]
 </div>
 <div class="csl-right-inline">
 <ol start="4" type="A">
@@ -413,7 +426,7 @@ href="https://doi.org/10.48550/arXiv.2406.07805">10.48550/arXiv.2406.07805</a>.
 </div>
 <div id="ref-hitting-times" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">
-[4]
+[5]
 </div>
 <div class="csl-right-inline">
 <ol start="6" type="A">
@@ -426,7 +439,7 @@ href="https://doi.org/10.48550/arXiv.2405.15094">10.48550/arXiv.2405.15094</a>.
 </div>
 <div id="ref-continuous-time" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">
-[5]
+[6]
 </div>
 <div class="csl-right-inline">
 <ol start="6" type="A">
@@ -439,7 +452,7 @@ href="https://doi.org/10.48550/arXiv.2402.17730">10.48550/arXiv.2402.17730</a>.
 </div>
 <div id="ref-k-submodular" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">
-[6]
+[7]
 </div>
 <div class="csl-right-inline">
 <ol start="6" type="A">
@@ -452,7 +465,7 @@ href="https://doi.org/10.48550/arXiv.2305.16013">10.48550/arXiv.2305.16013</a>.
 </div>
 <div id="ref-ad-allocation" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">
-[7]
+[8]
 </div>
 <div class="csl-right-inline">
 <ol start="6" type="A">
@@ -465,7 +478,7 @@ href="https://doi.org/10.48550/arXiv.2302.01827">10.48550/arXiv.2302.01827</a>.
 <div id="ref-learning-mixtures" class="csl-entry"
 role="doc-biblioentry">
 <div class="csl-left-margin">
-[8]
+[9]
 </div>
 <div class="csl-right-inline">
 <ol start="6" type="A">
@@ -477,7 +490,7 @@ href="https://doi.org/10.1145/3543507.3583524">10.1145/3543507.3583524</a>.
 </div>
 <div id="ref-decision-trees" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">
-[9]
+[10]
 </div>
 <div class="csl-right-inline">
 <ol start="6" type="A">
@@ -489,7 +502,7 @@ href="https://doi.org/10.48550/ARXIV.2208.04828">10.48550/ARXIV.2208.04828</a>.
 </div>
 <div id="ref-blockchain" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">
-[10]
+[11]
 </div>
 <div class="csl-right-inline">
 <ol start="20" type="A">
@@ -532,22 +545,26 @@ WWW 2023. Talk</li>
 </ul>
 <h2 id="service">Service</h2>
 <ul>
-<li>Program Committee: <a
-href="https://www.wsdm-conference.org/2024/">WSDM 2024</a> and <a
-href="https://www.wsdm-conference.org/2025/">WSDM 2025</a></li>
+<li>Program Committee: <a href="https://cikm2025.org/">CIKM 2025</a>, <a
+href="https://ecmlpkdd.org/2025/">ECML/PKDD 2025 research track</a>, <a
+href="https://www.wsdm-conference.org/2025/">WSDM 2025</a>, <a
+href="https://www.wsdm-conference.org/2024/">WSDM 2024</a></li>
 <li>Program Committee and Guest Editorial Board: <a
 href="https://2024.ecmlpkdd.org/">ECML/PKDD 2024 journal track</a></li>
 <li>Contributor to <a
 href="https://github.com/jgrapht/jgrapht">JGraphT</a> and <a
 href="https://github.com/networkx/networkx">NetworkX</a></li>
 </ul>
-<p><small>Built with <a href="https://pandoc.org/">Pandoc</a> on March
-4, 2025.</small></p>
+<p><small>Built with <a href="https://pandoc.org/">Pandoc</a> on May 29,
+2025.</small></p>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0H9ME7QHXP"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MZFM6BLJ07"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];  function gtag(){dataLayer.push(arguments);}  gtag('js', new Date());
-  gtag('config', 'G-0H9ME7QHXP');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MZFM6BLJ07');
 </script>
 </body>
 </html>
